--- a/home.html
+++ b/home.html
@@ -205,8 +205,8 @@
       sessionStorage.setItem("team1", name1);
       sessionStorage.setItem("team2", name2);
       sessionStorage.setItem("categories", JSON.stringify(selectedCategories));
-      sessionStorage.setItem("team1Score", "0");
-      sessionStorage.setItem("team2Score", "0");
+      sessionStorage.setItem("score1", "0");
+      sessionStorage.setItem("score2", "0");
       sessionStorage.setItem("currentTeam", "1");
 
       window.location.href = "board.html";
