--- a/السؤال.html
+++ b/السؤال.html
@@ -3,95 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>ذكاء × سرعة - السؤال</title>
-  <style>
-    body {
-      font-family: 'Baloo 2', cursive;
-      direction: rtl;
-      background: linear-gradient(to bottom right, #e0f7fa, #d0f5e8);
-      margin: 0; padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .container {
-      background: #ffffffcc;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 15px #999;
-      width: 90%;
-      max-width: 800px;
-      text-align: center;
-    }
-    .btn {
-      padding: 12px 25px;
-      margin: 5px;
-      font-size: 1.1em;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-    }
-    .btn-primary { background: #00796b; color: white; }
-    .btn-danger  { background: #c0392b; color: white; }
-    .btn-secondary { background: #2980b9; color: white; }
-    .btn-info { background: #16a085; color: white; }
-    .btn-warning { background: #f39c12; color: white; }
-    .team-turn, .points {
-      font-size: 1.3em;
-      color: #004d40;
-      font-weight: bold;
-    }
-    .question {
-      font-size: 1.6em;
-      margin: 20px 0;
-      color: #004d40;
-    }
-    #answer-box, #luck-result {
-      margin-top: 20px;
-      font-size: 1.4em;
-      color: #004d40;
-      display: none;
-    }
-    .bar {
-      height: 28px;
-      background-color: #16a085;
-      margin: 10px 0;
-      border-radius: 10px;
-      color: white;
-      padding-right: 10px;
-      font-weight: bold;
-      text-align: right;
-    }
-    #audience-chart, #countdown {
-      display: none;
-      margin-top: 20px;
-      font-size: 1.3em;
-      font-weight: bold;
-      color: #8e44ad;
-    }
-
-    /* تأثير الإجابة الصحيحة والخاطئة */
-    .shake {
-      animation: shake 0.4s ease-in-out;
-      background-color: #f8d7da !important;
-    }
-    .flash-success {
-      animation: flashGreen 0.6s ease-in-out;
-      background-color: #d4edda !important;
-    }
-    @keyframes shake {
-      0% { transform: translateX(0); }
-      25% { transform: translateX(-8px); }
-      50% { transform: translateX(8px); }
-      75% { transform: translateX(-8px); }
-      100% { transform: translateX(0); }
-    }
-    @keyframes flashGreen {
-      0% { opacity: 0.8; }
-      50% { background-color: #c3e6cb; }
-      100% { opacity: 1; }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style-question.css">
 </head>
 <body>
   <div class="container">
@@ -120,7 +33,6 @@
   <audio id="crowd-sound" src="crowd.mp3"></audio>
   <audio id="luck-sound" src="select.mp3"></audio>
   <audio id="wrong-sound" src="wrong.mp3"></audio>
-  <!-- أصوات صحيحة متعددة -->
   <audio class="correct-sound" src="correct1.mp3"></audio>
   <audio class="correct-sound" src="correct2.mp3"></audio>
   <audio class="correct-sound" src="correct3.mp3"></audio>
@@ -132,187 +44,6 @@
   <audio class="correct-sound" src="correct9.mp3"></audio>
   <audio class="correct-sound" src="correct10.mp3"></audio>
 
-  <script>
-    const currentTeam = parseInt(sessionStorage.getItem("currentTeam")) || 1;
-    const points = parseInt(sessionStorage.getItem("currentPoints")) || 200;
-    const correctAnswer = sessionStorage.getItem("currentAnswer") || "...";
-    const question = sessionStorage.getItem("currentQuestion") || "...";
-    const team1 = sessionStorage.getItem("team1") || "فريق 1";
-    const team2 = sessionStorage.getItem("team2") || "فريق 2";
-
-    document.getElementById("team-turn").textContent = `دور الفريق: ${currentTeam === 1 ? team1 : team2}`;
-    document.getElementById("points").textContent = `النقاط: ${points}`;
-    document.getElementById("question-text").textContent = question;
-
-    document.getElementById("show-answer-btn").addEventListener("click", () => {
-      const box = document.getElementById("answer-box");
-      box.textContent = `الإجابة الصحيحة: ${correctAnswer}`;
-      box.style.display = "block";
-    });
-
-    document.getElementById("correct-btn").addEventListener("click", () => {
-      const body = document.body;
-      const sounds = document.querySelectorAll(".correct-sound");
-      const randomSound = sounds[Math.floor(Math.random() * sounds.length)];
-      randomSound.play();
-      body.classList.add("flash-success");
-      setTimeout(() => body.classList.remove("flash-success"), 500);
-
-      const teamKey = currentTeam === 1 ? "team1Score" : "team2Score";
-      const opponentKey = currentTeam === 1 ? "team2Score" : "team1Score";
-      let currentScore = parseInt(sessionStorage.getItem(teamKey)) || 0;
-      let opponentScore = parseInt(sessionStorage.getItem(opponentKey)) || 0;
-      let earned = points;
-
-      const effect = sessionStorage.getItem("luckEffect");
-      if (effect === "double") earned *= 2;
-      else if (effect === "half") earned = Math.floor(earned / 2);
-      else if (effect === "minus") {
-        sessionStorage.setItem(teamKey, Math.max(currentScore - earned, 0));
-        alert(`❌ خصم النقاط: -${earned}`);
-        sessionStorage.removeItem("luckEffect");
-        sessionStorage.setItem("currentTeam", currentTeam === 1 ? "2" : "1");
-        return window.location.href = "board.html";
-      } else if (effect === "cancel") {
-        alert("🚫 تم إلغاء هذه الفرصة.");
-        sessionStorage.removeItem("luckEffect");
-        sessionStorage.setItem("currentTeam", currentTeam === 1 ? "2" : "1");
-        return window.location.href = "board.html";
-      }
-
-      sessionStorage.setItem(teamKey, currentScore + earned);
-      sessionStorage.removeItem("luckEffect");
-
-      if (sessionStorage.getItem("stealMode") === "true") {
-        sessionStorage.setItem(opponentKey, Math.max(opponentScore - points, 0));
-        sessionStorage.removeItem("stealMode");
-        alert(`🧨 تم خصم ${points} من الفريق الخصم!`);
-      }
-
-      alert(`✅ تمت إضافة ${earned} نقطة!`);
-      sessionStorage.setItem("currentTeam", currentTeam === 1 ? "2" : "1");
-      window.location.href = "board.html";
-    });
-
-    document.getElementById("wrong-btn").addEventListener("click", () => {
-      const body = document.body;
-      document.getElementById("wrong-sound").play();
-      body.classList.add("shake");
-      setTimeout(() => body.classList.remove("shake"), 500);
-      alert("❌ إجابة خاطئة، لا نقاط.");
-      sessionStorage.setItem("currentTeam", currentTeam === 1 ? "2" : "1");
-      window.location.href = "board.html";
-    });
-  </script>
- <script>
-  const audienceBtn = document.getElementById("audience-btn");
-  const luckBtn = document.getElementById("luck-btn");
-
-  audienceBtn?.addEventListener("click", async () => {
-    audienceBtn.disabled = true;
-    audienceBtn.textContent = "🎤 الجمهور (تم الاستخدام)";
-    document.getElementById("crowd-sound").play();
-
-    const chart = document.getElementById("audience-chart");
-    const countdown = document.getElementById("countdown");
-    chart.innerHTML = "";
-    chart.style.display = "block";
-
-    const questionText = sessionStorage.getItem("currentQuestion") || "...";
-
-    try {
-      const res = await fetch("questions.json");
-      const data = await res.json(); // [["سؤال", "إجابة"], ...]
-
-      // البحث عن السؤال من الشكل ["السؤال", "الإجابة"]
-      const found = data.find(q => q[0].trim() === questionText.trim());
-      if (!found) throw new Error("السؤال غير موجود في questions.json");
-
-      const correctAnswer = found[1].trim();
-
-      // جمع كل الإجابات الممكنة (باستثناء الصحيحة) لاستخدامها كخيارات
-      const otherAnswers = data
-        .map(q => q[1].trim())
-        .filter(ans => ans !== correctAnswer);
-
-      // أخذ 3 خيارات عشوائية
-      const randomWrong = otherAnswers.sort(() => 0.5 - Math.random()).slice(0, 3);
-
-      // إنشاء الخيارات الأربعة (صحيحة + 3 خاطئة)
-      const allOptions = [...randomWrong, correctAnswer].sort(() => 0.5 - Math.random());
-
-      // توزيع الأصوات
-      const votes = {};
-      const correctIndex = allOptions.indexOf(correctAnswer);
-      const correctPercent = 55 + Math.floor(Math.random() * 16); // 55 - 70%
-      votes[correctIndex] = correctPercent;
-
-      let remaining = 100 - correctPercent;
-      for (let i = 0; i < 4; i++) {
-        if (i !== correctIndex) {
-          let value = (i < 3) ? Math.floor(Math.random() * (remaining + 1)) : remaining;
-          votes[i] = value;
-          remaining -= value;
-        }
-      }
-
-      // عرض النتائج على شكل أعمدة
-      allOptions.forEach((opt, i) => {
-        const bar = document.createElement("div");
-        bar.className = "bar";
-        bar.style.width = votes[i] + "%";
-        bar.textContent = `${opt}: ${votes[i]}٪`;
-        chart.appendChild(bar);
-      });
-
-      // العداد التنازلي
-      let seconds = 15;
-      countdown.textContent = `⏳ ${seconds} ثانية...`;
-      countdown.style.display = "block";
-      const timer = setInterval(() => {
-        seconds--;
-        countdown.textContent = `⏳ ${seconds} ثانية...`;
-        if (seconds <= 0) {
-          clearInterval(timer);
-          chart.style.display = "none";
-          countdown.style.display = "none";
-        }
-      }, 1000);
-
-    } catch (error) {
-      alert("حدث خطأ أثناء تحميل سؤال الجمهور");
-      console.error(error);
-    }
-  });
-</script>
-
-
-
-
-  luckBtn?.addEventListener("click", () => {
-    luckBtn.disabled = true;
-    luckBtn.textContent = "🎲 نرد الحظ (تم الاستخدام)";
-    document.getElementById("luck-sound").play();
-    const resultBox = document.getElementById("luck-result");
-    const outcomes = [
-      "🎯 نقاط مضاعفة",
-      "🚫 إلغاء الفرصة",
-      "💸 نصف النقاط",
-      "❌ خصم النقاط"
-    ];
-    const selected = outcomes[Math.floor(Math.random() * outcomes.length)];
-    resultBox.textContent = `نتيجة النرد: ${selected}`;
-    resultBox.style.display = "block";
-    resultBox.style.animation = "flash 0.5s ease-in-out infinite alternate";
-    setTimeout(() => {
-      resultBox.style.animation = "none";
-    }, 3000);
-    if (selected.includes("مضاعفة")) sessionStorage.setItem('luckEffect', 'double');
-    else if (selected.includes("نصف")) sessionStorage.setItem('luckEffect', 'half');
-    else if (selected.includes("خصم")) sessionStorage.setItem('luckEffect', 'minus');
-    else if (selected.includes("إلغاء")) sessionStorage.setItem('luckEffect', 'cancel');
-  });
-</script>
-
+  <script src="question-logic.js"></script>
 </body>
 </html>
