--- a/home.html
+++ b/home.html
@@ -119,9 +119,10 @@
 
     const allCategories = {
       "إسلامية": ["دين", "قصص الأنبياء", "السيرة النبوية"],
-      "أنمي ومسلسلات": ["باب الحارة","ناروتو", "ون بيس", "كونان"],
-      "🎬 ترفيهي": ["أفلام كرتون زمان", "ذكاء وسرعة بديهة"],
+      "أنمي ومسلسلات": ["باب الحارة","ناروتو", "عائلة الحاج متولي","ون بيس", "كونان"],
+      "🎬 ترفيهي": ["ما تشتهر به الدول","دول وعواصم","أفلام كرتون زمان", "ذكاء وسرعة بديهة"],
       "🧒 أطفال": ["أسئلة رياض أطفال", "حيوانات", "فواكه وخضار"]
+      
     };
 
     const maxPerLevel = 2;
